syntax = "proto3";

package hotkeys.v1;

service HotkeysService {
  // Gets an array of all hotkey names in OBS.
  //
  // Original: GetHotkeyList
  rpc List(ListRequest) returns (ListResponse);
  // Triggers a hotkey using its name.
  //
  // Original: TriggerHotkeyByName
  rpc TriggerByName(TriggerByNameRequest) returns (TriggerByNameResponse);
  // Triggers a hotkey using a sequence of keys.
  //
  // Original: TriggerHotkeyBySequence
  rpc TriggerBySequence(TriggerBySequenceRequest) returns (TriggerBySequenceResponse);
}

message ListRequest {}

message ListResponse {
  // Array of hotkey names.
  repeated string hotkeys = 1;
}

message TriggerByNameRequest {
  // Name of the hotkey to trigger.
  string name = 1;
}

message TriggerByNameResponse {}

message TriggerBySequenceRequest {
  // The OBS key code to use.
  KeyCode code = 1;
  // Object containing key modifiers to apply.
  KeyModifiers modifiers = 2;

  enum KeyCode {
    KEY_CODE_UNSPECIFIED = 0;
    KEY_CODE_RETURN = 1;
    KEY_CODE_ENTER = 2;
    KEY_CODE_ESCAPE = 3;
    KEY_CODE_TAB = 4;
    KEY_CODE_BACKTAB = 5;
    KEY_CODE_BACKSPACE = 6;
    KEY_CODE_INSERT = 7;
    KEY_CODE_DELETE = 8;
    KEY_CODE_PAUSE = 9;
    KEY_CODE_PRINT = 10;
    KEY_CODE_SYSREQ = 11;
    KEY_CODE_CLEAR = 12;
    KEY_CODE_HOME = 13;
    KEY_CODE_END = 14;
    KEY_CODE_LEFT = 15;
    KEY_CODE_UP = 16;
    KEY_CODE_RIGHT = 17;
    KEY_CODE_DOWN = 18;
    KEY_CODE_PAGEUP = 19;
    KEY_CODE_PAGEDOWN = 20;
    KEY_CODE_SHIFT = 21;
    KEY_CODE_CONTROL = 22;
    KEY_CODE_META = 23;
    KEY_CODE_ALT = 24;
    KEY_CODE_ALTGR = 25;
    KEY_CODE_CAPSLOCK = 26;
    KEY_CODE_NUMLOCK = 27;
    KEY_CODE_SCROLLLOCK = 28;
    KEY_CODE_F1 = 29;
    KEY_CODE_F2 = 30;
    KEY_CODE_F3 = 31;
    KEY_CODE_F4 = 32;
    KEY_CODE_F5 = 33;
    KEY_CODE_F6 = 34;
    KEY_CODE_F7 = 35;
    KEY_CODE_F8 = 36;
    KEY_CODE_F9 = 37;
    KEY_CODE_F10 = 38;
    KEY_CODE_F11 = 39;
    KEY_CODE_F12 = 40;
    KEY_CODE_F13 = 41;
    KEY_CODE_F14 = 42;
    KEY_CODE_F15 = 43;
    KEY_CODE_F16 = 44;
    KEY_CODE_F17 = 45;
    KEY_CODE_F18 = 46;
    KEY_CODE_F19 = 47;
    KEY_CODE_F20 = 48;
    KEY_CODE_F21 = 49;
    KEY_CODE_F22 = 50;
    KEY_CODE_F23 = 51;
    KEY_CODE_F24 = 52;
    KEY_CODE_F25 = 53;
    KEY_CODE_F26 = 54;
    KEY_CODE_F27 = 55;
    KEY_CODE_F28 = 56;
    KEY_CODE_F29 = 57;
    KEY_CODE_F30 = 58;
    KEY_CODE_F31 = 59;
    KEY_CODE_F32 = 60;
    KEY_CODE_F33 = 61;
    KEY_CODE_F34 = 62;
    KEY_CODE_F35 = 63;
    KEY_CODE_MENU = 64;
    KEY_CODE_HYPER_L = 65;
    KEY_CODE_HYPER_R = 66;
    KEY_CODE_HELP = 67;
    KEY_CODE_DIRECTION_L = 68;
    KEY_CODE_DIRECTION_R = 69;
    KEY_CODE_SPACE = 70;
    KEY_CODE_EXCLAM = 71;
    KEY_CODE_QUOTEDBL = 72;
    KEY_CODE_NUMBERSIGN = 73;
    KEY_CODE_DOLLAR = 74;
    KEY_CODE_PERCENT = 75;
    KEY_CODE_AMPERSAND = 76;
    KEY_CODE_APOSTROPHE = 77;
    KEY_CODE_PARENLEFT = 78;
    KEY_CODE_PARENRIGHT = 79;
    KEY_CODE_ASTERISK = 80;
    KEY_CODE_PLUS = 81;
    KEY_CODE_COMMA = 82;
    KEY_CODE_MINUS = 83;
    KEY_CODE_PERIOD = 84;
    KEY_CODE_SLASH = 85;
    KEY_CODE_0 = 86;
    KEY_CODE_1 = 87;
    KEY_CODE_2 = 88;
    KEY_CODE_3 = 89;
    KEY_CODE_4 = 90;
    KEY_CODE_5 = 91;
    KEY_CODE_6 = 92;
    KEY_CODE_7 = 93;
    KEY_CODE_8 = 94;
    KEY_CODE_9 = 95;
    KEY_CODE_NUMEQUAL = 96;
    KEY_CODE_NUMASTERISK = 97;
    KEY_CODE_NUMPLUS = 98;
    KEY_CODE_NUMCOMMA = 99;
    KEY_CODE_NUMMINUS = 100;
    KEY_CODE_NUMPERIOD = 101;
    KEY_CODE_NUMSLASH = 102;
    KEY_CODE_NUM0 = 103;
    KEY_CODE_NUM1 = 104;
    KEY_CODE_NUM2 = 105;
    KEY_CODE_NUM3 = 106;
    KEY_CODE_NUM4 = 107;
    KEY_CODE_NUM5 = 108;
    KEY_CODE_NUM6 = 109;
    KEY_CODE_NUM7 = 110;
    KEY_CODE_NUM8 = 111;
    KEY_CODE_NUM9 = 112;
    KEY_CODE_COLON = 113;
    KEY_CODE_SEMICOLON = 114;
    KEY_CODE_QUOTE = 115;
    KEY_CODE_LESS = 116;
    KEY_CODE_EQUAL = 117;
    KEY_CODE_GREATER = 118;
    KEY_CODE_QUESTION = 119;
    KEY_CODE_AT = 120;
    KEY_CODE_A = 121;
    KEY_CODE_B = 122;
    KEY_CODE_C = 123;
    KEY_CODE_D = 124;
    KEY_CODE_E = 125;
    KEY_CODE_F = 126;
    KEY_CODE_G = 127;
    KEY_CODE_H = 128;
    KEY_CODE_I = 129;
    KEY_CODE_J = 130;
    KEY_CODE_K = 131;
    KEY_CODE_L = 132;
    KEY_CODE_M = 133;
    KEY_CODE_N = 134;
    KEY_CODE_O = 135;
    KEY_CODE_P = 136;
    KEY_CODE_Q = 137;
    KEY_CODE_R = 138;
    KEY_CODE_S = 139;
    KEY_CODE_T = 140;
    KEY_CODE_U = 141;
    KEY_CODE_V = 142;
    KEY_CODE_W = 143;
    KEY_CODE_X = 144;
    KEY_CODE_Y = 145;
    KEY_CODE_Z = 146;
    KEY_CODE_BRACKETLEFT = 147;
    KEY_CODE_BACKSLASH = 148;
    KEY_CODE_BRACKETRIGHT = 149;
    KEY_CODE_ASCIICIRCUM = 150;
    KEY_CODE_UNDERSCORE = 151;
    KEY_CODE_QUOTELEFT = 152;
    KEY_CODE_BRACELEFT = 153;
    KEY_CODE_BAR = 154;
    KEY_CODE_BRACERIGHT = 155;
    KEY_CODE_ASCIITILDE = 156;
    KEY_CODE_NOBREAKSPACE = 157;
    KEY_CODE_EXCLAMDOWN = 158;
    KEY_CODE_CENT = 159;
    KEY_CODE_STERLING = 160;
    KEY_CODE_CURRENCY = 161;
    KEY_CODE_YEN = 162;
    KEY_CODE_BROKENBAR = 163;
    KEY_CODE_SECTION = 164;
    KEY_CODE_DIAERESIS = 165;
    KEY_CODE_COPYRIGHT = 166;
    KEY_CODE_ORDFEMININE = 167;
    KEY_CODE_GUILLEMOTLEFT = 168;
    KEY_CODE_NOTSIGN = 169;
    KEY_CODE_HYPHEN = 170;
    KEY_CODE_REGISTERED = 171;
    KEY_CODE_MACRON = 172;
    KEY_CODE_DEGREE = 173;
    KEY_CODE_PLUSMINUS = 174;
    KEY_CODE_TWOSUPERIOR = 175;
    KEY_CODE_THREESUPERIOR = 176;
    KEY_CODE_ACUTE = 177;
    KEY_CODE_MU = 178;
    KEY_CODE_PARAGRAPH = 179;
    KEY_CODE_PERIODCENTERED = 180;
    KEY_CODE_CEDILLA = 181;
    KEY_CODE_ONESUPERIOR = 182;
    KEY_CODE_MASCULINE = 183;
    KEY_CODE_GUILLEMOTRIGHT = 184;
    KEY_CODE_ONEQUARTER = 185;
    KEY_CODE_ONEHALF = 186;
    KEY_CODE_THREEQUARTERS = 187;
    KEY_CODE_QUESTIONDOWN = 188;
    KEY_CODE_AGRAVE = 189;
    KEY_CODE_AACUTE = 190;
    KEY_CODE_ACIRCUMFLEX = 191;
    KEY_CODE_ATILDE = 192;
    KEY_CODE_ADIAERESIS = 193;
    KEY_CODE_ARING = 194;
    KEY_CODE_AE = 195;
    KEY_CODE_CCEDILLA = 196;
    KEY_CODE_EGRAVE = 197;
    KEY_CODE_EACUTE = 198;
    KEY_CODE_ECIRCUMFLEX = 199;
    KEY_CODE_EDIAERESIS = 200;
    KEY_CODE_IGRAVE = 201;
    KEY_CODE_IACUTE = 202;
    KEY_CODE_ICIRCUMFLEX = 203;
    KEY_CODE_IDIAERESIS = 204;
    KEY_CODE_ETH = 205;
    KEY_CODE_NTILDE = 206;
    KEY_CODE_OGRAVE = 207;
    KEY_CODE_OACUTE = 208;
    KEY_CODE_OCIRCUMFLEX = 209;
    KEY_CODE_OTILDE = 210;
    KEY_CODE_ODIAERESIS = 211;
    KEY_CODE_MULTIPLY = 212;
    KEY_CODE_OOBLIQUE = 213;
    KEY_CODE_UGRAVE = 214;
    KEY_CODE_UACUTE = 215;
    KEY_CODE_UCIRCUMFLEX = 216;
    KEY_CODE_UDIAERESIS = 217;
    KEY_CODE_YACUTE = 218;
    KEY_CODE_THORN = 219;
    KEY_CODE_SSHARP = 220;
    KEY_CODE_DIVISION = 221;
    KEY_CODE_YDIAERESIS = 222;
    KEY_CODE_MULTI_KEY = 223;
    KEY_CODE_CODEINPUT = 224;
    KEY_CODE_SINGLECANDIDATE = 225;
    KEY_CODE_MULTIPLECANDIDATE = 226;
    KEY_CODE_PREVIOUSCANDIDATE = 227;
    KEY_CODE_MODE_SWITCH = 228;
    KEY_CODE_KANJI = 229;
    KEY_CODE_MUHENKAN = 230;
    KEY_CODE_HENKAN = 231;
    KEY_CODE_ROMAJI = 232;
    KEY_CODE_HIRAGANA = 233;
    KEY_CODE_KATAKANA = 234;
    KEY_CODE_HIRAGANA_KATAKANA = 235;
    KEY_CODE_ZENKAKU = 236;
    KEY_CODE_HANKAKU = 237;
    KEY_CODE_ZENKAKU_HANKAKU = 238;
    KEY_CODE_TOUROKU = 239;
    KEY_CODE_MASSYO = 240;
    KEY_CODE_KANA_LOCK = 241;
    KEY_CODE_KANA_SHIFT = 242;
    KEY_CODE_EISU_SHIFT = 243;
    KEY_CODE_EISU_TOGGLE = 244;
    KEY_CODE_HANGUL = 245;
    KEY_CODE_HANGUL_START = 246;
    KEY_CODE_HANGUL_END = 247;
    KEY_CODE_HANGUL_HANJA = 248;
    KEY_CODE_HANGUL_JAMO = 249;
    KEY_CODE_HANGUL_ROMAJA = 250;
    KEY_CODE_HANGUL_JEONJA = 251;
    KEY_CODE_HANGUL_BANJA = 252;
    KEY_CODE_HANGUL_PREHANJA = 253;
    KEY_CODE_HANGUL_POSTHANJA = 254;
    KEY_CODE_HANGUL_SPECIAL = 255;
    KEY_CODE_DEAD_GRAVE = 256;
    KEY_CODE_DEAD_ACUTE = 257;
    KEY_CODE_DEAD_CIRCUMFLEX = 258;
    KEY_CODE_DEAD_TILDE = 259;
    KEY_CODE_DEAD_MACRON = 260;
    KEY_CODE_DEAD_BREVE = 261;
    KEY_CODE_DEAD_ABOVEDOT = 262;
    KEY_CODE_DEAD_DIAERESIS = 263;
    KEY_CODE_DEAD_ABOVERING = 264;
    KEY_CODE_DEAD_DOUBLEACUTE = 265;
    KEY_CODE_DEAD_CARON = 266;
    KEY_CODE_DEAD_CEDILLA = 267;
    KEY_CODE_DEAD_OGONEK = 268;
    KEY_CODE_DEAD_IOTA = 269;
    KEY_CODE_DEAD_VOICED_SOUND = 270;
    KEY_CODE_DEAD_SEMIVOICED_SOUND = 271;
    KEY_CODE_DEAD_BELOWDOT = 272;
    KEY_CODE_DEAD_HOOK = 273;
    KEY_CODE_DEAD_HORN = 274;
    KEY_CODE_BACK = 275;
    KEY_CODE_FORWARD = 276;
    KEY_CODE_STOP = 277;
    KEY_CODE_REFRESH = 278;
    KEY_CODE_VOLUMEDOWN = 279;
    KEY_CODE_VOLUMEMUTE = 280;
    KEY_CODE_VOLUMEUP = 281;
    KEY_CODE_BASSBOOST = 282;
    KEY_CODE_BASSUP = 283;
    KEY_CODE_BASSDOWN = 284;
    KEY_CODE_TREBLEUP = 285;
    KEY_CODE_TREBLEDOWN = 286;
    KEY_CODE_MEDIAPLAY = 287;
    KEY_CODE_MEDIASTOP = 288;
    KEY_CODE_MEDIAPREVIOUS = 289;
    KEY_CODE_MEDIANEXT = 290;
    KEY_CODE_MEDIARECORD = 291;
    KEY_CODE_MEDIAPAUSE = 292;
    KEY_CODE_MEDIATOGGLEPLAYPAUSE = 293;
    KEY_CODE_HOMEPAGE = 294;
    KEY_CODE_FAVORITES = 295;
    KEY_CODE_SEARCH = 296;
    KEY_CODE_STANDBY = 297;
    KEY_CODE_OPENURL = 298;
    KEY_CODE_LAUNCHMAIL = 299;
    KEY_CODE_LAUNCHMEDIA = 300;
    KEY_CODE_LAUNCH0 = 301;
    KEY_CODE_LAUNCH1 = 302;
    KEY_CODE_LAUNCH2 = 303;
    KEY_CODE_LAUNCH3 = 304;
    KEY_CODE_LAUNCH4 = 305;
    KEY_CODE_LAUNCH5 = 306;
    KEY_CODE_LAUNCH6 = 307;
    KEY_CODE_LAUNCH7 = 308;
    KEY_CODE_LAUNCH8 = 309;
    KEY_CODE_LAUNCH9 = 310;
    KEY_CODE_LAUNCHA = 311;
    KEY_CODE_LAUNCHB = 312;
    KEY_CODE_LAUNCHC = 313;
    KEY_CODE_LAUNCHD = 314;
    KEY_CODE_LAUNCHE = 315;
    KEY_CODE_LAUNCHF = 316;
    KEY_CODE_LAUNCHG = 317;
    KEY_CODE_LAUNCHH = 318;
    KEY_CODE_MONBRIGHTNESSUP = 319;
    KEY_CODE_MONBRIGHTNESSDOWN = 320;
    KEY_CODE_KEYBOARDLIGHTONOFF = 321;
    KEY_CODE_KEYBOARDBRIGHTNESSUP = 322;
    KEY_CODE_KEYBOARDBRIGHTNESSDOWN = 323;
    KEY_CODE_POWEROFF = 324;
    KEY_CODE_WAKEUP = 325;
    KEY_CODE_EJECT = 326;
    KEY_CODE_SCREENSAVER = 327;
    KEY_CODE_WWW = 328;
    KEY_CODE_MEMO = 329;
    KEY_CODE_LIGHTBULB = 330;
    KEY_CODE_SHOP = 331;
    KEY_CODE_HISTORY = 332;
    KEY_CODE_ADDFAVORITE = 333;
    KEY_CODE_HOTLINKS = 334;
    KEY_CODE_BRIGHTNESSADJUST = 335;
    KEY_CODE_FINANCE = 336;
    KEY_CODE_COMMUNITY = 337;
    KEY_CODE_AUDIOREWIND = 338;
    KEY_CODE_BACKFORWARD = 339;
    KEY_CODE_APPLICATIONLEFT = 340;
    KEY_CODE_APPLICATIONRIGHT = 341;
    KEY_CODE_BOOK = 342;
    KEY_CODE_CD = 343;
    KEY_CODE_CALCULATOR = 344;
    KEY_CODE_TODOLIST = 345;
    KEY_CODE_CLEARGRAB = 346;
    KEY_CODE_CLOSE = 347;
    KEY_CODE_COPY = 348;
    KEY_CODE_CUT = 349;
    KEY_CODE_DISPLAY = 350;
    KEY_CODE_DOS = 351;
    KEY_CODE_DOCUMENTS = 352;
    KEY_CODE_EXCEL = 353;
    KEY_CODE_EXPLORER = 354;
    KEY_CODE_GAME = 355;
    KEY_CODE_GO = 356;
    KEY_CODE_ITOUCH = 357;
    KEY_CODE_LOGOFF = 358;
    KEY_CODE_MARKET = 359;
    KEY_CODE_MEETING = 360;
    KEY_CODE_MENUKB = 361;
    KEY_CODE_MENUPB = 362;
    KEY_CODE_MYSITES = 363;
    KEY_CODE_NEWS = 364;
    KEY_CODE_OFFICEHOME = 365;
    KEY_CODE_OPTION = 366;
    KEY_CODE_PASTE = 367;
    KEY_CODE_PHONE = 368;
    KEY_CODE_CALENDAR = 369;
    KEY_CODE_REPLY = 370;
    KEY_CODE_RELOAD = 371;
    KEY_CODE_ROTATEWINDOWS = 372;
    KEY_CODE_ROTATIONPB = 373;
    KEY_CODE_ROTATIONKB = 374;
    KEY_CODE_SAVE = 375;
    KEY_CODE_SEND = 376;
    KEY_CODE_SPELL = 377;
    KEY_CODE_SPLITSCREEN = 378;
    KEY_CODE_SUPPORT = 379;
    KEY_CODE_TASKPANE = 380;
    KEY_CODE_TERMINAL = 381;
    KEY_CODE_TOOLS = 382;
    KEY_CODE_TRAVEL = 383;
    KEY_CODE_VIDEO = 384;
    KEY_CODE_WORD = 385;
    KEY_CODE_XFER = 386;
    KEY_CODE_ZOOMIN = 387;
    KEY_CODE_ZOOMOUT = 388;
    KEY_CODE_AWAY = 389;
    KEY_CODE_MESSENGER = 390;
    KEY_CODE_WEBCAM = 391;
    KEY_CODE_MAILFORWARD = 392;
    KEY_CODE_PICTURES = 393;
    KEY_CODE_MUSIC = 394;
    KEY_CODE_BATTERY = 395;
    KEY_CODE_BLUETOOTH = 396;
    KEY_CODE_WLAN = 397;
    KEY_CODE_UWB = 398;
    KEY_CODE_AUDIOFORWARD = 399;
    KEY_CODE_AUDIOREPEAT = 400;
    KEY_CODE_AUDIORANDOMPLAY = 401;
    KEY_CODE_SUBTITLE = 402;
    KEY_CODE_AUDIOCYCLETRACK = 403;
    KEY_CODE_TIME = 404;
    KEY_CODE_HIBERNATE = 405;
    KEY_CODE_VIEW = 406;
    KEY_CODE_TOPMENU = 407;
    KEY_CODE_POWERDOWN = 408;
    KEY_CODE_SUSPEND = 409;
    KEY_CODE_CONTRASTADJUST = 410;
    KEY_CODE_MEDIALAST = 411;
    KEY_CODE_CALL = 412;
    KEY_CODE_CAMERA = 413;
    KEY_CODE_CAMERAFOCUS = 414;
    KEY_CODE_CONTEXT1 = 415;
    KEY_CODE_CONTEXT2 = 416;
    KEY_CODE_CONTEXT3 = 417;
    KEY_CODE_CONTEXT4 = 418;
    KEY_CODE_FLIP = 419;
    KEY_CODE_HANGUP = 420;
    KEY_CODE_NO = 421;
    KEY_CODE_SELECT = 422;
    KEY_CODE_YES = 423;
    KEY_CODE_TOGGLECALLHANGUP = 424;
    KEY_CODE_VOICEDIAL = 425;
    KEY_CODE_LASTNUMBERREDIAL = 426;
    KEY_CODE_EXECUTE = 427;
    KEY_CODE_PRINTER = 428;
    KEY_CODE_PLAY = 429;
    KEY_CODE_SLEEP = 430;
    KEY_CODE_ZOOM = 431;
    KEY_CODE_CANCEL = 432;

    KEY_CODE_MOUSE1 = 433;
    KEY_CODE_MOUSE2 = 434;
    KEY_CODE_MOUSE3 = 435;
    KEY_CODE_MOUSE4 = 436;
    KEY_CODE_MOUSE5 = 437;
    KEY_CODE_MOUSE6 = 438;
    KEY_CODE_MOUSE7 = 439;
    KEY_CODE_MOUSE8 = 440;
    KEY_CODE_MOUSE9 = 441;
    KEY_CODE_MOUSE10 = 442;
    KEY_CODE_MOUSE11 = 443;
    KEY_CODE_MOUSE12 = 444;
    KEY_CODE_MOUSE13 = 445;
    KEY_CODE_MOUSE14 = 446;
    KEY_CODE_MOUSE15 = 447;
    KEY_CODE_MOUSE16 = 448;
    KEY_CODE_MOUSE17 = 449;
    KEY_CODE_MOUSE18 = 450;
    KEY_CODE_MOUSE19 = 451;
    KEY_CODE_MOUSE20 = 452;
    KEY_CODE_MOUSE21 = 453;
    KEY_CODE_MOUSE22 = 454;
    KEY_CODE_MOUSE23 = 455;
    KEY_CODE_MOUSE24 = 456;
    KEY_CODE_MOUSE25 = 457;
    KEY_CODE_MOUSE26 = 458;
    KEY_CODE_MOUSE27 = 459;
    KEY_CODE_MOUSE28 = 460;
    KEY_CODE_MOUSE29 = 461;

    KEY_CODE_BACKSLASH_RT102 = 462;
    KEY_CODE_OPEN = 463;
    KEY_CODE_FIND = 464;
    KEY_CODE_REDO = 465;
    KEY_CODE_UNDO = 466;
    KEY_CODE_FRONT = 467;
    KEY_CODE_PROPS = 468;
    KEY_CODE_VK_CANCEL = 469;
    KEY_CODE_0X07 = 470;
    KEY_CODE_0X0A = 471;
    KEY_CODE_0X0B = 472;
    KEY_CODE_0X0E = 473;
    KEY_CODE_0X0F = 474;
    KEY_CODE_0X16 = 475;
    KEY_CODE_VK_JUNJA = 476;
    KEY_CODE_VK_FINAL = 477;
    KEY_CODE_0X1A = 478;
    KEY_CODE_VK_ACCEPT = 479;
    KEY_CODE_VK_MODECHANGE = 480;
    KEY_CODE_VK_SELECT = 481;
    KEY_CODE_VK_PRINT = 482;
    KEY_CODE_VK_EXECUTE = 483;
    KEY_CODE_VK_HELP = 484;
    KEY_CODE_0X30 = 485;
    KEY_CODE_0X31 = 486;
    KEY_CODE_0X32 = 487;
    KEY_CODE_0X33 = 488;
    KEY_CODE_0X34 = 489;
    KEY_CODE_0X35 = 490;
    KEY_CODE_0X36 = 491;
    KEY_CODE_0X37 = 492;
    KEY_CODE_0X38 = 493;
    KEY_CODE_0X39 = 494;
    KEY_CODE_0X3A = 495;
    KEY_CODE_0X3B = 496;
    KEY_CODE_0X3C = 497;
    KEY_CODE_0X3D = 498;
    KEY_CODE_0X3E = 499;
    KEY_CODE_0X3F = 500;
    KEY_CODE_0X40 = 501;
    KEY_CODE_0X41 = 502;
    KEY_CODE_0X42 = 503;
    KEY_CODE_0X43 = 504;
    KEY_CODE_0X44 = 505;
    KEY_CODE_0X45 = 506;
    KEY_CODE_0X46 = 507;
    KEY_CODE_0X47 = 508;
    KEY_CODE_0X48 = 509;
    KEY_CODE_0X49 = 510;
    KEY_CODE_0X4A = 511;
    KEY_CODE_0X4B = 512;
    KEY_CODE_0X4C = 513;
    KEY_CODE_0X4D = 514;
    KEY_CODE_0X4E = 515;
    KEY_CODE_0X4F = 516;
    KEY_CODE_0X50 = 517;
    KEY_CODE_0X51 = 518;
    KEY_CODE_0X52 = 519;
    KEY_CODE_0X53 = 520;
    KEY_CODE_0X54 = 521;
    KEY_CODE_0X55 = 522;
    KEY_CODE_0X56 = 523;
    KEY_CODE_0X57 = 524;
    KEY_CODE_0X58 = 525;
    KEY_CODE_0X59 = 526;
    KEY_CODE_0X5A = 527;
    KEY_CODE_VK_LWIN = 528;
    KEY_CODE_VK_RWIN = 529;
    KEY_CODE_VK_APPS = 530;
    KEY_CODE_0X5E = 531;
    KEY_CODE_VK_SLEEP = 532;
    KEY_CODE_VK_SEPARATOR = 533;
    KEY_CODE_0X88 = 534;
    KEY_CODE_0X89 = 535;
    KEY_CODE_0X8A = 536;
    KEY_CODE_0X8B = 537;
    KEY_CODE_0X8C = 538;
    KEY_CODE_0X8D = 539;
    KEY_CODE_0X8E = 540;
    KEY_CODE_0X8F = 541;
    KEY_CODE_VK_OEM_FJ_JISHO = 542;
    KEY_CODE_VK_OEM_FJ_LOYA = 543;
    KEY_CODE_VK_OEM_FJ_ROYA = 544;
    KEY_CODE_0X97 = 545;
    KEY_CODE_0X98 = 546;
    KEY_CODE_0X99 = 547;
    KEY_CODE_0X9A = 548;
    KEY_CODE_0X9B = 549;
    KEY_CODE_0X9C = 550;
    KEY_CODE_0X9D = 551;
    KEY_CODE_0X9E = 552;
    KEY_CODE_0X9F = 553;
    KEY_CODE_VK_LSHIFT = 554;
    KEY_CODE_VK_RSHIFT = 555;
    KEY_CODE_VK_LCONTROL = 556;
    KEY_CODE_VK_RCONTROL = 557;
    KEY_CODE_VK_LMENU = 558;
    KEY_CODE_VK_RMENU = 559;
    KEY_CODE_VK_BROWSER_BACK = 560;
    KEY_CODE_VK_BROWSER_FORWARD = 561;
    KEY_CODE_VK_BROWSER_REFRESH = 562;
    KEY_CODE_VK_BROWSER_STOP = 563;
    KEY_CODE_VK_BROWSER_SEARCH = 564;
    KEY_CODE_VK_BROWSER_FAVORITES = 565;
    KEY_CODE_VK_BROWSER_HOME = 566;
    KEY_CODE_VK_VOLUME_MUTE = 567;
    KEY_CODE_VK_VOLUME_DOWN = 568;
    KEY_CODE_VK_VOLUME_UP = 569;
    KEY_CODE_VK_MEDIA_NEXT_TRACK = 570;
    KEY_CODE_VK_MEDIA_PREV_TRACK = 571;
    KEY_CODE_VK_MEDIA_STOP = 572;
    KEY_CODE_VK_MEDIA_PLAY_PAUSE = 573;
    KEY_CODE_VK_LAUNCH_MAIL = 574;
    KEY_CODE_VK_LAUNCH_MEDIA_SELECT = 575;
    KEY_CODE_VK_LAUNCH_APP1 = 576;
    KEY_CODE_VK_LAUNCH_APP2 = 577;
    KEY_CODE_0XB8 = 578;
    KEY_CODE_0XB9 = 579;
    KEY_CODE_0XC1 = 580;
    KEY_CODE_0XC2 = 581;
    KEY_CODE_0XC3 = 582;
    KEY_CODE_0XC4 = 583;
    KEY_CODE_0XC5 = 584;
    KEY_CODE_0XC6 = 585;
    KEY_CODE_0XC7 = 586;
    KEY_CODE_0XC8 = 587;
    KEY_CODE_0XC9 = 588;
    KEY_CODE_0XCA = 589;
    KEY_CODE_0XCB = 590;
    KEY_CODE_0XCC = 591;
    KEY_CODE_0XCD = 592;
    KEY_CODE_0XCE = 593;
    KEY_CODE_0XCF = 594;
    KEY_CODE_0XD0 = 595;
    KEY_CODE_0XD1 = 596;
    KEY_CODE_0XD2 = 597;
    KEY_CODE_0XD3 = 598;
    KEY_CODE_0XD4 = 599;
    KEY_CODE_0XD5 = 600;
    KEY_CODE_0XD6 = 601;
    KEY_CODE_0XD7 = 602;
    KEY_CODE_0XD8 = 603;
    KEY_CODE_0XD9 = 604;
    KEY_CODE_0XDA = 605;
    KEY_CODE_VK_OEM_8 = 606;
    KEY_CODE_0XE0 = 607;
    KEY_CODE_VK_OEM_AX = 608;
    KEY_CODE_VK_ICO_HELP = 609;
    KEY_CODE_VK_ICO_00 = 610;
    KEY_CODE_VK_PROCESSKEY = 611;
    KEY_CODE_VK_ICO_CLEAR = 612;
    KEY_CODE_VK_PACKET = 613;
    KEY_CODE_0XE8 = 614;
    KEY_CODE_VK_OEM_RESET = 615;
    KEY_CODE_VK_OEM_JUMP = 616;
    KEY_CODE_VK_OEM_PA1 = 617;
    KEY_CODE_VK_OEM_PA2 = 618;
    KEY_CODE_VK_OEM_PA3 = 619;
    KEY_CODE_VK_OEM_WSCTRL = 620;
    KEY_CODE_VK_OEM_CUSEL = 621;
    KEY_CODE_VK_OEM_ATTN = 622;
    KEY_CODE_VK_OEM_FINISH = 623;
    KEY_CODE_VK_OEM_COPY = 624;
    KEY_CODE_VK_OEM_AUTO = 625;
    KEY_CODE_VK_OEM_ENLW = 626;
    KEY_CODE_VK_ATTN = 627;
    KEY_CODE_VK_CRSEL = 628;
    KEY_CODE_VK_EXSEL = 629;
    KEY_CODE_VK_EREOF = 630;
    KEY_CODE_VK_PLAY = 631;
    KEY_CODE_VK_ZOOM = 632;
    KEY_CODE_VK_NONAME = 633;
    KEY_CODE_VK_PA1 = 634;
    KEY_CODE_VK_OEM_CLEAR = 635;
  }

  message KeyModifiers {
    // Press Shift.
    bool shift = 1;
    // Press CTRL.
    bool control = 2;
    // Press ALT.
    bool alt = 3;
    // Press CMD (Mac).
    bool command = 4;
  }
}

message TriggerBySequenceResponse {}
